--- a/2021校内赛优秀论文展/上海交通大学第一届数学建模校内赛优秀论文展.md
+++ b/2021校内赛优秀论文展/上海交通大学第一届数学建模校内赛优秀论文展.md
@@ -6,11 +6,13 @@
 
 
 
+
 ## 二、建模思路
 
 （对每一问问题的分析，所采用的建模思路与方法，流程图，有无对方法加以改进，**必填**）
 
 
+$$x_1 + x_2 = x_3$$
 
 
 
@@ -21,12 +23,13 @@
 
 
 
-
+![12](https://images.gitee.com/uploads/images/2021/1009/091605_ee273920_9125377.png "屏幕截图.png")
 
 
 ## 四、总结
 
 （自评分析（是否达到目标预期，可能改进的方向，建模过程中遇到的困难，模型的优缺点，从哪些方面可以改进模型，模型的假设是否合理等，**必填**）
+
 
 
 
