--- a/2021校内赛优秀论文展/上海交通大学第一届数学建模校内赛优秀论文展.md
+++ b/2021校内赛优秀论文展/上海交通大学第一届数学建模校内赛优秀论文展.md
@@ -11,7 +11,7 @@
 
 （对每一问问题的分析，所采用的建模思路与方法，流程图，有无对方法加以改进，**必填**）
 
-
+此处可以插入公式
 $$x_1 + x_2 = x_3$$
 
 
@@ -21,9 +21,8 @@ $$x_1 + x_2 = x_3$$
 （问题结果的图表，描述清楚图像的横纵坐标，图的意义，**必填**）
 
 
+![此处插入图片](https://images.gitee.com/uploads/images/2021/1009/091954_d496d102_9125377.png "屏幕截图.png")
 
-
-![12](https://images.gitee.com/uploads/images/2021/1009/091605_ee273920_9125377.png "屏幕截图.png")
 
 
 ## 四、总结
@@ -38,3 +37,6 @@ $$x_1 + x_2 = x_3$$
 ## 五、代码
 
 （解决问题中的核心代码，体现创新的算法代码等，**选填**）
+```python
+import numpy as np
+```
