--- a/2021校内赛优秀论文展/上海交通大学第一届数学建模校内赛优秀论文展.md
+++ b/2021校内赛优秀论文展/上海交通大学第一届数学建模校内赛优秀论文展.md
@@ -27,7 +27,7 @@ $$x_1 + x_2 = x_3$$
 
 ## 四、总结
 
-（自评分析（是否达到目标预期，可能改进的方向，建模过程中遇到的困难，模型的优缺点，从哪些方面可以改进模型，模型的假设是否合理等，**必填**）
+（自评分析，是否达到目标预期，可能改进的方向，建模过程中遇到的困难，模型的优缺点，从哪些方面可以改进模型，模型的假设是否合理等，**必填**）
 
 
 
