第四次讨论班总结文档更正

--- a/Python数学建模讨论班总结文档/讨论班04/线性代数问题的符号解和数值解(更正).md
+++ b/Python数学建模讨论班总结文档/讨论班04/线性代数问题的符号解和数值解(更正).md
@@ -45,7 +45,7 @@ print(C**2)
 
 > $$
 > 矩阵的范数: {Frobenius范数}= \sqrt{\Sigma_{i}\Sigma_{j} A_{ij}^2}
-> \\还有很多种不再一一列举，sympy内只能向量求模长
+> \newline还有很多种不再一一列举，sympy内只能向量求模长
 > $$
 
 ```python
@@ -90,8 +90,8 @@ print(C**2)
 
 $$
 \begin{cases} 
-x_1 - 5x_2 + 2x_3 - 3x_4 = 0\\
-5x_1 + 3x_2 + 6x_3 - x_4 = 0\\
+x_1 - 5x_2 + 2x_3 - 3x_4 = 0\newline
+5x_1 + 3x_2 + 6x_3 - x_4 = 0\newline
 2x_1 + 4x_2 + 2x_3 + x_4 = 0
 \end{cases}
 $$
@@ -125,8 +125,8 @@ print(A.nullspace()) # 零空间解系即基础解系
 
 $$
 \begin{cases}
-x_1 + x_2 - 3x_3 - x_4 = 1 \\
-3x_1 - x_2 - 3x_3 + 4x_4 = 4\\
+x_1 + x_2 - 3x_3 - x_4 = 1 \newline
+3x_1 - x_2 - 3x_3 + 4x_4 = 4\newline
 x_1 + 5x_2 - 9x_3 - 8x_4 = 0
 \end{cases}
 $$
@@ -154,7 +154,7 @@ print(A1.rref()) # rref() 化为标准型
 * #### 定义
 
   $$
-  Aα = λα\\ \alpha 是A关于 特征值\lambda 的 特征向量
+  Aα = λα\newline \alpha 是A关于 特征值\lambda 的 特征向量
   $$
 
   
@@ -162,12 +162,12 @@ print(A1.rref()) # rref() 化为标准型
 * #### 充要条件
 
   $$
-  |A - \lambda E| = 0\\
+  |A - \lambda E| = 0\newline
   
   A = \left[
   \begin{matrix} 
-  0&-2& 2\\
-  -2& -3& 4\\
+  0&-2& 2\newline
+  -2& -3& 4\newline
   2& 4 &-3 
   \end{matrix}
   \right]
@@ -203,7 +203,7 @@ print(A1.rref()) # rref() 化为标准型
 * #### 定义
 
   $$
-  P^{-1}AP = D\\
+  P^{-1}AP = D\newline
   
   D为对角矩阵
   $$
@@ -266,8 +266,8 @@ print(A1.rref()) # rref() 化为标准型
   代码:
   $$
   \begin{cases}
-  x_1 + x_2 -3x_3 -x_4 = 1\\
-  3x_1 -x_2 -3x_2 + 4x_4 = 4\\
+  x_1 + x_2 -3x_3 -x_4 = 1\newline
+  3x_1 -x_2 -3x_2 + 4x_4 = 4\newline
   x_1 + 5x_2 - 9x_3 - 8x_4 = 0
   \end{cases}
   $$
@@ -291,8 +291,8 @@ print(A1.rref()) # rref() 化为标准型
 
   $$
   \begin{cases}
-  x_1 + x_2 = 1\\
-  2x_1 + 2x_2 = 3\\
+  x_1 + x_2 = 1\newline
+  2x_1 + 2x_2 = 3\newline
   x_1 + 2x_2 = 2
   \end{cases}
   $$
@@ -317,17 +317,17 @@ print(A1.rref()) # rref() 化为标准型
   $$
   \left[
   \begin{matrix}
-  0&1\\1&1\\2&1\\3&1\\
+  0&1\newline1&1\newline2&1\newline3&1\newline
   \end{matrix}
   \right]
   \left[
   \begin{matrix}
-  m\\c
+  m\newline c
   \end{matrix}
   \right]
   \left[
   \begin{matrix}
-  -1\\0.2\\0.9\\2.1
+  -1\newline0.2\newline0.9\newline2.1
   \end{matrix}
   \right]
   $$
