第四次讨论班总结文档更正

--- a/Python数学建模讨论班总结文档/讨论班04/线性代数问题的符号解和数值解(更正).md
+++ b/Python数学建模讨论班总结文档/讨论班04/线性代数问题的符号解和数值解(更正).md
@@ -44,8 +44,7 @@ print(C**2)
 * #### 基本矩阵操作
 
 > $$
-> 矩阵的范数: {Frobenius范数}= \sqrt{\Sigma_{i}\Sigma_{j} A_{ij}^2}
-> \newline还有很多种不再一一列举，sympy内只能向量求模长
+> 矩阵的范数: {Frobenius范数}= \sqrt{\Sigma_{i}\Sigma_{j} A_{ij}^2} \newline还有很多种不再一一列举，sympy内只能向量求模长
 > $$
 
 ```python
@@ -154,7 +153,7 @@ print(A1.rref()) # rref() 化为标准型
 * #### 定义
 
   $$
-  Aα = λα\newline \alpha 是A关于 特征值\lambda 的 特征向量
+  Aα = λα \newline \alpha 是A关于 特征值\lambda 的 特征向量
   $$
 
   
@@ -162,12 +161,12 @@ print(A1.rref()) # rref() 化为标准型
 * #### 充要条件
 
   $$
-  |A - \lambda E| = 0\newline
+  |A - \lambda E| = 0 \newline
   
   A = \left[
   \begin{matrix} 
-  0&-2& 2\newline
-  -2& -3& 4\newline
+  0&-2& 2 \newline
+  -2& -3& 4 \newline
   2& 4 &-3 
   \end{matrix}
   \right]
@@ -203,7 +202,7 @@ print(A1.rref()) # rref() 化为标准型
 * #### 定义
 
   $$
-  P^{-1}AP = D\newline
+  P^{-1}AP = D \newline
   
   D为对角矩阵
   $$
