第七次讨论班资料

--- a/Python数学建模讨论班资料/讨论班07/07/第七次讨论班.md
+++ b/Python数学建模讨论班资料/讨论班07/07/第七次讨论班.md
@@ -187,40 +187,45 @@ plt.show()
 
 #### (3)
 
-![image-20211120180053957](https://gitee.com/mr_asd/taolunban-img/raw/master/images/image-20211120180053957.png)
+<img src="https://gitee.com/mr_asd/taolunban-img/raw/master/images/image-20211120183358662.png" alt="image-20211120183358662" style="zoom:150%;" />
+
+
 
 代码
 
 ```python
+
+# 程序文件Pan5_1_2.py
+import matplotlib.pyplot as plt
 import numpy as np
-from scipy.optimize import linprog
-z1 = np.array([-100, -90, -80, -70])
-z2 = np.array([0, 3, 0, 2])
-A = np.matrix([[-1,0,3,0], [-1,0,0,3], [0,-1,2,0], [0,-1,0,2]]).T
-b = np.matrix([-30, -30, 120, 48]).T
-resp1 = linprog(z1, A_ub=A, b_ub=b, method="simplex")
-resp2 = linprog(z2, A_ub=A, b_ub=b, method="simplex")
-print(f"z1:\n{resp1}\n z2:\n{resp2}")
-# 输出
-z1:
-     con: array([], dtype=float64)
-     fun: -5960.0
- message: 'Optimization terminated successfully.'
-     nit: 5
-   slack: array([0., 9., 0., 0.])
-  status: 0
- success: True
-       x: array([14., 16., 39.,  0.])
- z2:
-     con: array([], dtype=float64)
-     fun: 30.0
- message: 'Optimization terminated successfully.'
-     nit: 5
-   slack: array([ 0.,  0.,  0., 18.])
-  status: 0
- success: True
-       x: array([20., 10., 30.,  0.])
+import cvxpy as cp
+
+# plt.rc('text', usetex=True)
+plt.rc('font', size=16)
+x = cp.Variable(6, pos=True)
+a1 = np.array([0.025, 0.015, 0.055, 0.026])
+a2 = np.array([0.05, 0.27, 0.19, 0.185, 0.185])
+a3 = np.array([1, 1.01, 1.02, 1.045, 1.065])
+s = 0.00
+ss = []
+ff = []
+while s <= 1:
+    obj = cp.Minimize(s*x[5] - (1-s)*sum(cp.multiply(a2,x[:-1])))
+    con = [cp.multiply(a1, x[1:5]) - x[5] <= 0,
+            a3 @ x[:-1] == 1]
+    prob = cp.Problem(obj, con)
+    prob.solve(solver='GLPK_MI')
+    ss.append(s)
+    ff.append(prob.value)
+    s = s + 0.01
+plt.plot(ss, ff, 'r*')
+plt.xlabel('s')
+plt.ylabel('R', rotation=90)
+plt.show()
+
 ```
 
+输出
 
+![image-20211120205901226](https://gitee.com/mr_asd/taolunban-img/raw/master/images/image-20211120205901226.png)
 
