--- a/美赛/历年优秀论文.md
+++ b/美赛/历年优秀论文.md
@@ -1,4 +1,7 @@
 # 美赛历年优秀论文
 
-## jbox下载链接
+## jbox下载链接（需要交大VPN）
 https://jbox.sjtu.edu.cn/l/91oy8o
+
+## GitHub下载链接
+https://github.com/dick20/MCM-ICM
