--- a/Python数学建模讨论班总结文档/讨论班04/线性代数问题的符号解和数值解(更正).md
+++ b/Python数学建模讨论班总结文档/讨论班04/线性代数问题的符号解和数值解(更正).md
@@ -153,7 +153,7 @@ print(A1.rref()) # rref() 化为标准型
 * #### 定义
 
   $$
-  Aα = λα \newline \alpha 是A关于 特征值\lambda 的 特征向量
+  Aα = λα \newline， \alpha 是A关于 特征值\lambda 的 特征向量
   $$
 
   
@@ -201,7 +201,7 @@ print(A1.rref()) # rref() 化为标准型
 * #### 定义
 
   $$
-  P^{-1}AP = D \newline
+  P^{-1}AP = D \newline，
   D为对角矩阵
   $$
 
