--- a/Python数学建模讨论班总结文档/2022暑假/0723讨论班/0723-陈天权_朱小志_朱坦晟-优化类常用模型与算法实现.ipynb
+++ b/Python数学建模讨论班总结文档/2022暑假/0723讨论班/0723-陈天权_朱小志_朱坦晟-优化类常用模型与算法实现.ipynb
@@ -172,8 +172,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: scipy in c:\\users\\mix\\anaconda3\\lib\\site-packages (1.7.1)\n",
-      "Requirement already satisfied: numpy<1.23.0,>=1.16.5 in c:\\users\\mix\\anaconda3\\lib\\site-packages (from scipy) (1.20.3)\n",
       "目标函数的最小值： 0.4000000006526985\n",
       "最优解为： [-1.60000000e+00  8.29674988e-11 -4.00000000e-01]\n"
      ]
@@ -550,6 +548,7 @@
    "metadata": {},
    "source": [
     "解：建立数学模型为：\n",
+    "$$\n",
     "\\begin{aligned}\n",
     "&\\max z_{1}=\\sum_{j=1}^{7} l_{j}\\left(x_{1 j}+x_{2 j}\\right), \\\\\n",
     "&\\text { s.t. }\\left\\{\\begin{array}{l}\n",
@@ -559,7 +558,8 @@
     "\\sum_{j=5}^{7} l_{j}\\left(x_{1 j}+x_{2 j}\\right) \\leq 302.7, \\\\\n",
     "x_{i j} \\geq 0 \\text { 且为整数, } \\quad i=1,2 ; j=1,2, \\cdots, 7 .\n",
     "\\end{array}\\right.\n",
-    "\\end{aligned}"
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -749,7 +749,7 @@
     "  * 无向图，邻接矩阵$W=(w_{ij})_{n\\times n}$\n",
     "  $$\n",
     "  w_{ij}=\\begin{cases}\n",
-    "    w((v_i,v_j)),(v_i,v_j)\\in E \\\\0(or \\infty),(v_i,v_j)\\notin E\n",
+    "    w((v_i,v_j)),(v_i,v_j)\\in E \\\\0(\\mathrm{or}\\  \\infty),(v_i,v_j)\\notin E\n",
     "  \\end{cases}\n",
     "  $$\n",
     "  * 有向图定义类似"
@@ -1116,7 +1116,7 @@
     "  \n",
     "各矿场产量分布如下图：\n",
     "\n",
-    "![2022-07-22-19-24-00](./2022-07-22-19-24-00.png)"
+    "![2022-07-22-19-24-00](https://cdn.jsdelivr.net/gh/kckcwly/figures@main/2022-07-22-19-24-00.png)"
    ]
   },
   {
@@ -2283,7 +2283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2301,7 +2301,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "d170beaea96cd7064c6c6e10581b6ecc3cd757427f2f2a8969081773bd343767"
+    "hash": "49cb93f377a7abe7414b7b0f21fb3017538004a126cf690fb524202736b7fb92"
    }
   }
  },
